# findata-analytics

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  visualize.py
analytics/: queries.py
data_pipeline/: eodhd_client.py  ingest.py  synthetic.py
