[project]
name = "findata-analytics"
version = "0.1.0"
description = "Financial data pipeline & quantitative analytics with EODHD, DuckDB, and Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "duckdb>=1.0.0",
    "eodhd>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
    "python-dotenv>=1.0.0",
]
